--- a/app/src/main/res/layout/activity_mtp_slave.xml
+++ b/app/src/main/res/layout/activity_mtp_slave.xml
@@ -7,12 +7,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MTP1"/>
-
-    <Button
-        android:id="@+id/btn1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="MTP1"/>
+        android:text="MTP SLAVE"/>
 
 </LinearLayout>
